--- a/P1/otros/todo
+++ b/P1/otros/todo
@@ -1,20 +1,8 @@
-reparto de tareas:
+Cosas que hacer:
 	incluir el xml (pagina de filtros)
 	header y footer
 	ejemplos de pelis de verdad
 	Valoración en estrellas o algo así
 	Barra de scroll horizontal
 	tester de W3Schools
-	acceso de usuario
 	arreglar el scroller del todo	
-
--2: 
-	Pensar la estructura de la página
-
-
-
-- DJ
-	temux
-
-- GJ
-
