--- a/P2/otros/todo
+++ b/P2/otros/todo
@@ -1,20 +1,3 @@
-reparto de tareas:
-	incluir el xml (pagina de filtros)
-	header y footer
-	ejemplos de pelis de verdad
+Cosas que hacer:
 	Valoración en estrellas o algo así
-	Barra de scroll horizontal
 	tester de W3Schools
-	acceso de usuario
-	arreglar el scroller del todo	
-
--2: 
-	Pensar la estructura de la página
-
-
-
-- DJ
-	temux
-
-- GJ
-
