Empezado el registro de usuario con los directorios y eso. HTML 5 mola xD

--- a/P2/otros/todo
+++ b/P2/otros/todo
@@ -1,3 +1,6 @@
 Cosas que hacer:
-	Valoración en estrellas o algo así
-	tester de W3Schools
+	· Valoración en estrellas o algo así
+	· Tester de W3Schools
+
+VdJ:
+	· Con Javascript aparición dinámica de campos para rellenar en el login/register.
