Avanzado el tema del login y registrarse y eso

--- a/P2/otros/todo
+++ b/P2/otros/todo
@@ -3,4 +3,7 @@ Cosas que hacer:
 	· Tester de W3Schools
 
 VdJ:
-	· Con Javascript aparición dinámica de campos para rellenar en el login/register.
+		¿Cómo hacer el login?
+		Cifrar contraseñas.
+		Tenemos 2 index que habría que juntar... la lista de pelis con xml complica el proceso de login y todo eso.
+		
