Añadido reparto de tareas

--- a/P2/otros/todo
+++ b/P2/otros/todo
@@ -1,6 +1,18 @@
 Cosas que hacer:
 	· Valoración en estrellas o algo así
 	· Tester de W3Schools
+	· Memoria.	
 
 VdJ:
-		Cifrar contraseñas.
+	· Login con ventanita.
+	· Finalizar compra desde el carrito 
+	· Historial de compra.
+	· Cookies para último usuario.
+
+Guille:
+	· Peliculas en xml.
+	· Búsqueda.
+	· Reorganizar y revisar.
+	· página de erroes.
+	· Ajax s de mierda de numeritos. Luego lo leeré y pensaré que soy gilipollas. 
+
