Hecho el html del login superpuesto. Vamos a por el javascript para que sea útil

--- a/P2/otros/todo
+++ b/P2/otros/todo
@@ -4,7 +4,7 @@ Cosas que hacer:
 	· Memoria.	
 
 VdJ:
-	· Login con ventanita.
+	· Login con ventanita y fortaleza de la contraseña.
 	· Finalizar compra desde el carrito 
 	· Historial de compra.
 	· Cookies para último usuario.
