Corregido un minifallo de estilo del boton de login

--- a/P2/otros/todo
+++ b/P2/otros/todo
@@ -4,9 +4,13 @@ Cosas que hacer:
 	· Memoria.	
 
 VdJ:
-	· Fortaleza de la contraseña.
 	· Finalizar compra desde el carrito 
+		- Escribir xml de historial de compra.
+		- Vaciar el carrito.
+		- Interacción con el usuario.
 	· Historial de compra.
+
+
 	· Cookies para último usuario.
 
 Guille:
